test/tests/compiler/14_pointers/invalid_types/negate_pointer.plx
#  It's illegal to negate a pointer 
pub fn main(none) i32 {
    x: *i32 = 0
    -x
    return false
}
